services/dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-stripprefix
  namespace: kubernetes-dashboard
spec:
  stripPrefix:
    prefixes:
      - /dashboard
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/router.middlewares: kubernetes-dashboard-dashboard-stripprefix@kubernetescrd
spec:
  ingressClassName: public
  rules:
  - http:
      paths:
      - path: /dashboard
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 8443
